--- a/SpringApp/src/main/resources/templates/image_output.html
+++ b/SpringApp/src/main/resources/templates/image_output.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>neuroflow Service</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="../static/assets/favicon.ico" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,7 +38,7 @@
             <section class="py-5">
                 <div class="container px-5 mb-5">
                     <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">사진 입력</span></h1>
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">추천 사진</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -46,15 +46,12 @@
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">사진을 보내주세요!</h2>
-                                            <p>추천 성형 얼굴을 보여드립니다!</p>
-                                        </div>
                                         <div>
-                                            <form action="photo" method="post" enctype="multipart/form-data">
-                                                <input type="file" name="image">
-                                                <input type="submit" value="전송!">
-                                            </form>
+<!--                                            <h2 class="fw-bolder">당신의 사진</h2>-->
+<!--                                            <p>추천 성형 얼굴을 보여드립니다!</p>-->
+<!--                                        </div>-->
+<!--                                        <div>-->
+                                            <img th:src="'data:image/jpeg;base64,'+ ${image_file}" alt="Image">
                                         </div>
 <!--                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />-->
                                     </div>
